classDiagram
    class Owner {
        +String name
        +int availableTime
        +List~Pet~ pets
        +addPet(pet: Pet) void
        +deletePet(pet: Pet) void
    }

    class Pet {
        +String name
        +String species
        +List~Task~ tasks
        +addTask(task: Task) void
        +deleteTask(task: Task) void
    }

    class Task {
        +String name
        +int duration
        +int priority
        +bool isRecurring
        +markComplete() void
    }

    class Scheduler {
        +generatePlan(owner: Owner) List~Task~
        +filterByCompletion(owner: Owner, completed: bool) List~Task~
        +filterByPetName(owner: Owner, petName: String) List~Task~
    }

    Owner "1" *-- "many" Pet : owns
    Pet "1" *-- "many" Task : has
    Scheduler ..> Owner : uses
